# sr_optimal_edge_bot

./: .gitignore  LICENSE  README.md  dotenv.example  environment_dev.yml  environment_dev_from_history.yml  setup.cfg  tox.ini
.github/workflows/: python-package-conda.yml
ansible_playbook/handlers/: main.yml
ansible_playbook/tasks/: main.yml
ansible_playbook/templates/: sr_optimal_edge_bot.ini.j2
ansible_playbook/vars/main/: vars.yml
optimal_edge/: main.py  util.py
src/optimal_edge/: main.py  util.py
src/optimal_edge/util/: __init__.py  wrapper.py
test/: test_util.py  test_util_math.py  test_util_wrapper.py
