[metadata]
name = optimal_edge
version = attr: optimal_edge.__version__
author = Tim Adler
author_email = tim+github@emrys-merlin.de
description = Provides a discord bot to tell you if Breaking the Limit or Second Chance is better
long_description = file: README.md, LICENSE.md
# keywords = one, two
license = MIT-License
# classifiers =
#     Framework :: Django
#     Programming Language :: Python :: 3

[options]
# zip_safe = False
# include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >=3.9
install_requires =
    python-dotenv
    discord

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.entry_points]
console_scripts =
    optimal_edge_bot = optimal_edge.main:main

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = src